[package]
name = "rlist"
version = "0.0.1"
edition = "2021"
authors = [ "fedfontana" ]
depcription = "Reading list manager cli"
license = "MIT"
repository = "https://github.com/fedfontana/rlist"

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
